--- a/check/profile.html
+++ b/check/profile.html
@@ -13,7 +13,7 @@
         </header>
         <main>
             <button>переглянути</button>
-            <button onclick="document.location.href = 'create.html'">додати запис</button>
+            <button onclick="document.location.href = 'transfer.html'">додати запис</button>
         </main>
         <footer>
             <button onclick="logout()">Вийти</button>
