--- a/storage/index.html
+++ b/storage/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no" name="viewport">
+        <link rel="preload" crossorigin="anonymous" href="fonts/Comfortaa-Cyrillic-Bold.woff2" as="font">
+        <link rel="preload" crossorigin="anonymous" href="fonts/Comfortaa-Cyrillic.woff2" as="font">
+        <link rel="preload" crossorigin="anonymous" href="fonts/Comfortaa-Latin.woff2" as="font">
+        <link rel="dns-prefetch" href="//purchase-history.herokuapp.com/">
         <link rel="stylesheet" href="css/default.css">
+        <link rel="icon" href="imgs/icon.png">
+        <link rel="apple-touch-icon" href="imgs/apple-icon.png">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/login-page.css">
-        <title lang="en">Sales Slip</title>
+        <title lang="en">Purchase History</title>
     </head>
     <body>
         <script>
@@ -15,7 +21,7 @@
         </script>
         <section data-main>
             <header>
-                <h1 lang="en">Sales Slip</h1>
+                <h1 lang="en">Purchase History</h1>
                 <p>...створений з натхненням <br/> для простих цілей</p>
             </header>
             <main>
