--- a/storage/create.html
+++ b/storage/create.html
@@ -18,11 +18,11 @@
             <h1>Редагування чека</h1>
         </header>
         <main>
-            <form id="create-form" name="create-form" autocomplete="on">
+            <form id="create-form" name="create-form" onsubmit="submitForm(event)" autocomplete="off">
                 <datalist id="shops"></datalist>
                 <datalist id="products"></datalist>
-                <input type="text" id="shopname" placeholder="Назва закладу" aria-label="Назва закладу" list="shops">
-                <input type="date" id="date" aria-label="Дата">
+                <input type="text" id="shopname" name="shopname" placeholder="Назва закладу" aria-label="Назва закладу" list="shops" required>
+                <input type="date" id="date" name="date" aria-label="Дата" required>
                 <table id="main-table">
                     <thead>
                         <tr>
@@ -35,20 +35,20 @@
                     <tbody id="table-body">
                         <tr data-edit oninput="rowChange(this)" onfocusout="rmField(this)">
                             <td>
-                                <input type="text" list="products" onfocus="editField(this)" 
-                                placeholder="найменування товару" aria-label="найменування товару">
+                                <input type="text" name="product" list="products" onfocus="editField(this)" 
+                                placeholder="найменування товару" aria-label="найменування товару" required>
                             </td>
                             <td>
-                                <input type="number" step="any" placeholder="кількість" aria-label="кількість">
+                                <input type="number" name="count" step="any" placeholder="кількість" aria-label="кількість" required>
                             </td>
                             <td>
-                                <select aria-label="одиниці вимірювання">
+                                <select name="type" aria-label="одиниці вимірювання">
                                     <option lang="en" selected>pcs</option>
                                     <option lang="en">kgs</option>
                                 </select>
                             </td>
                             <td>
-                                <input type="number" step="any" placeholder="вартість" aria-label="вартість">
+                                <input type="number" name="price" step="any" placeholder="вартість" aria-label="вартість" required>
                             </td>
                         </tr>
                     </tbody>
@@ -117,14 +117,22 @@
             const addField = (element) => {
                 let tr = document.createElement('tr')
                 tr.innerHTML = `
-                    <td>
-                        <input type="text" list="products" placeholder="найменування товару" aria-label="найменування товару"></td>
-                    <td><input type="number" step="any" placeholder="кількість" aria-label="кількість"></td><!--
-                    --><td><select aria-label="одиниці вимірювання">
+                <td>
+                    <input type="text" name="product" list="products" 
+                    placeholder="найменування товару" aria-label="найменування товару">
+                </td>
+                <td>
+                    <input type="number" name="count" step="any" placeholder="кількість" aria-label="кількість">
+                </td>
+                <td>
+                    <select name="type" aria-label="одиниці вимірювання">
                         <option lang="en" selected>pcs</option>
                         <option lang="en">kgs</option>
-                    </select></td><!--
-                    --><td><input type="number" step="any" placeholder="вартість" aria-label="вартість"></td>
+                    </select>
+                </td>
+                <td>
+                    <input type="number" name="price" step="any" placeholder="вартість" aria-label="вартість">
+                </td>
                 `
                 tr.oninput = () => rowChange(tr)
                 tr.addEventListener('focusout', () => rmField(tr))
@@ -132,6 +140,41 @@
                 getElement('table-body').appendChild(tr)
 
                 return tr
+            }
+
+            const submitForm = (e) => {
+                e.preventDefault()
+                const products = getElement('products')
+
+                const form = doc.forms["create-form"]
+                let data = []
+
+                form["product"].forEach((el, index) => {
+                    if (!el.value) return
+
+                    data.push({
+                        'product': el.value,
+                        'count': form["count"][index].value,
+                        'type': form["type"][index].value,
+                        'price': form["price"][index].value.replace(',', '.')
+                    })
+
+                    if (id = products.querySelector(`option[value="${el.value}"]`))
+                        data[data.length - 1]['product'] = id.getAttr('data-id')
+                })
+
+                let finalData = {
+                    'shop-name': form["shopname"].value,
+                    'date': form["date"].value,
+                    'products': data
+                }
+
+                if (id = getElement('shops').querySelector(`option[value="${finalData['shop-name']}"]`))
+                    finalData['shop-name'] = id.getAttr('data-id')
+
+                localStorage.clear()
+                localStorage.setItem('form-data', JSON.stringify(finalData))
+                doc.location.href = 'transfer.html'
             }
         </script>
     </body>
