new data structure

--- a/storage/index.html
+++ b/storage/index.html
@@ -50,7 +50,7 @@
                 </div>
             </main>
         </section>
-        <script src="main.js"></script>
+        <script src="scripts/main.js"></script>
         <script>
             const loginCallback = (res) => {
                 doc.forms['login-form'].rmAttr('data-loading')
