--- a/storage/create.html
+++ b/storage/create.html
@@ -55,11 +55,12 @@
                 </table>
                 <div class="space_container"></div>
                 <div class="submit_container">
-                    <input type="submit" value="Зберегти">
+                    <input type="submit" value="Зберегти"><!--
+                    --><input type="button" onclick="doc.location.href = 'profile.html'" value="Скасувати">
                 </div>
             </form>
         </main>
-        <script src="main.js"></script>
+        <script src="scripts/main.js"></script>
         <script>
             if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent))
                 document.body.setAttr('data-mobile', '')
@@ -153,7 +154,7 @@
                     if (!el.value) return
 
                     data.push({
-                        'product': el.value,
+                        'product': el.value.trim(),
                         'count': form["count"][index].value,
                         'type': form["type"][index].value,
                         'price': form["price"][index].value.replace(',', '.')
