--- a/storage/view.html
+++ b/storage/view.html
@@ -18,7 +18,7 @@
             <h1>Перегляд чека</h1>
         </header>
         <main>
-            <form id="view-form" name="create-form">
+            <form id="view-form" name="view-form">
                 <datalist id="shops"></datalist>
                 <datalist id="products"></datalist>
                 <fieldset disabled>
