--- a/storage/profile.html
+++ b/storage/profile.html
@@ -18,7 +18,7 @@
         </header>
         <main>
             <button>переглянути</button>
-            <button onclick="document.location.href = 'transfer.html'">додати запис</button>
+            <button onclick="sessionStorage.clear(); document.location.href = 'transfer.html'">додати запис</button>
         </main>
         <footer>
             <button onclick="logout()">Вийти</button>
