--- a/storage/profile.html
+++ b/storage/profile.html
@@ -17,7 +17,7 @@
             <h1 data-visible>Сховище чеків</h1>
         </header>
         <main>
-            <button>переглянути</button>
+            <button onclick="sessionStorage.clear(); document.location.href = 'transfer.html#list'">переглянути</button>
             <button onclick="sessionStorage.clear(); document.location.href = 'transfer.html'">додати запис</button>
         </main>
         <footer>
